@@ -14,8 +14,6 @@ import org.hibernate.Transaction;
 import org.hibernate.boot.Metadata;
 import org.hibernate.cfg.AvailableSettings;
 import org.hibernate.cfg.Environment;
-import org.hibernate.cfg.reveng.DefaultReverseEngineeringStrategy;
-import org.hibernate.cfg.reveng.ReverseEngineeringSettings;
 import org.hibernate.mapping.Collection;
 import org.hibernate.mapping.KeyValue;
 import org.hibernate.mapping.OneToMany;
@@ -23,6 +21,8 @@ import org.hibernate.mapping.PersistentClass;
 import org.hibernate.mapping.Property;
 import org.hibernate.mapping.Set;
 import org.hibernate.tool.api.metadata.MetadataDescriptorFactory;
+import org.hibernate.tool.api.reveng.ReverseEngineeringSettings;
+import org.hibernate.tool.internal.reveng.DefaultReverseEngineeringStrategy;
 import org.hibernate.tools.test.util.JdbcUtil;
 import org.junit.After;
 import org.junit.Assert;
@@ -104,7 +104,7 @@ public class TestCase {
         Transaction t = session.beginTransaction();
 	
         Orders order = new Orders();
-		order.setId(new Integer(1) );
+		order.setId(Integer.valueOf(1) );
 		order.setName("Mickey");
 		
 		session.save(order);
@@ -122,7 +122,7 @@ public class TestCase {
 		session = sf.openSession();
 		t = session.beginTransaction();
 		
-		Item loadeditem = (Item) session.get(PACKAGE_NAME + ".Item", new Integer(42) );
+		Item loadeditem = (Item) session.get(PACKAGE_NAME + ".Item", Integer.valueOf(42) );
 		
 		Assert.assertEquals(item.getName(),loadeditem.getName() );
         Assert.assertEquals(item.getChildId(),loadeditem.getChildId() );
@@ -140,7 +140,7 @@ public class TestCase {
         session = sf.openSession();
 		t = session.beginTransaction();
         
-		order = (Orders) session.load(Orders.class, new Integer(1) );
+		order = (Orders) session.load(Orders.class, Integer.valueOf(1) );
         Assert.assertFalse(Hibernate.isInitialized(order) );
         Assert.assertFalse(Hibernate.isInitialized(order.getItemsForOrderId() ) );
         
@@ -154,7 +154,7 @@ public class TestCase {
 
 	private Item addItem(Orders m, int itemid, String name) {
         Item item = new Item();
-        item.setChildId(new Integer(itemid) );
+        item.setChildId(Integer.valueOf(itemid) );
         item.setOrderId(m);
         item.setName(name);
         m.getItemsForOrderId().add(item);
